Ditch HOG processing
