# openapi.yaml
@@ -148,16 +148,8 @@ components:
           items:
             type: number
           nullable: true
-        hog_features:
-          type: array
-          items:
-            type: number
-          nullable: true
         ai_probability:
           type: number
-          nullable: true
-        hog_image_url:
-          type: string
           nullable: true
         fd_default:
           type: number
